@@ -1,3 +1,6 @@
+ * Fixed a compile time issue with OpenSSL 1.0.2 in the new OCSP code.
+ * Skip port checks for domain server_rec selection when "tls-alpn-01" is configured
+   explicitly (related to #133). [@mkauf]
  * Added a sample scripts/md_message.sh on how to use `MDMessageCmd`.
 
 v2.2.3
